syntax = "proto3";

package ru.hse.lmsteam.proto.lessons;

option java_multiple_files = true;
option java_package = "ru.hse.lmsteam.schema.api.lessons";

import "google/protobuf/wrappers.proto";
import "ru/hse/lmsteam/proto/common/pageable.proto";

message GetLesson {
  message Response {
    Lesson lesson = 1;
  }
}

message UpdateLesson {
  message Request {
    Lesson lesson = 1;
  }

  message Response {
    Lesson lesson = 1;
  }
}

message CreateLesson {
  message Request {

  }

  message Response {
    Lesson lesson = 1;
  }
}

message DeleteLesson {
  message Response {
    int64 entities_deleted = 1;
  }
}

message Lesson {
  string id = 1;
  string title = 2;
  int32 lesson_number = 3;
  // date in protobuff? publish_date

  google.protobuf.StringValue description = 5;

}